--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <!-- icon -->
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   
 </head>
 <body>
@@ -18,7 +18,7 @@
       <a href="#" class="nav-logo">YOUR.<span>LOGO</span></a>
       <div class="nav-bar"> 
 
-        <a href="#">HOME</a>
+        <a href="#home">HOME</a>
         <a href="#about">ABOUT</a>
         <a href="#product">PRODUCT</a>
         <a href="#contact">CONTACT</a>
@@ -32,11 +32,20 @@
       </div>
 
   </nav>
+   <!-- hero content -->
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Your Product<span>Tagline</span></h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quo?</p>
+        <a href="#" class="cta">Buy Now</a>
+      </main>
+    </section>
+   
         
  
     <script>
         feather.replace();
       </script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
